--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
         "morgan": "~1.9.1",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "path": "^0.12.7"
     }
 }
